ReSharper.FSharp/test/data/parsing/errors/Type member - Identifier 02.fs
type T() =
    inherit B()

    x
